Fixes image alignment when alignwide is used for screens larger than 1400px.

--- a/src/assets/scss/_gutenberg-support.scss
+++ b/src/assets/scss/_gutenberg-support.scss
@@ -22,7 +22,7 @@
     position: relative;
 
     @media only screen and (min-width: 1526px) {
-        left: 30px;
+        width: 100% !important;
     }
 }
 
